src/com/intellij/xtextLanguage/xtext/grammar/Xtext.bnf
{
    tokens = [
        ID =  'regexp:^?[a-zA-Z_][a-zA-Z0-9_]*'
        STRING = "regexp:(\"([^\"\\]|\\.)*\"|'([^'\\]|\\.)*')"
        INT = 'regexp:[0-9]+'
        ML_COMMENT = 'regexp:/\*(?s).*\*/'
        SL_COMMENT = 'regexp: //.*'
        WS = 'regexp:\s+'
        ANY_OTHER ='regexp:.'
    ]





  parserClass="com.intellij.xtextLanguage.xtext.parser.XtextParser"

  extends="com.intellij.extapi.psi.ASTWrapperPsiElement"
  psiClassPrefix="Xtext"
  psiImplClassSuffix="Impl"
  psiPackage="com.intellij.xtextLanguage.xtext.psi"
  psiImplPackage="com.intellij.xtextLanguage.xtext.impl"

  elementTypeHolderClass="com.intellij.xtextLanguage.xtext.psi.XtextTypes"
  elementTypeClass="com.intellij.xtextLanguage.xtext.psi.XtextElementType"
  tokenTypeClass="com.intellij.xtextLanguage.xtext.psi.XtextTokenType"

  generateTokenAccessors=true
  generateTokens=true
}
Grammar::=
	'grammar' GrammarID ('with' REFERENCE_Grammar_GrammarID/* usedGrammars+=[Grammar|GrammarID]*/ (',' REFERENCE_Grammar_GrammarID)*)?
	('hidden' '(' (REFERENCE_AbstractRule_RuleID/* usedGrammars+=[Grammar|GrammarID]*/ (',' REFERENCE_AbstractRule_RuleID)*)? ')')?
	AbstractMetamodelDeclaration*
	(AbstractRule)+


GrammarID::=
	ValidID ('.' ValidID)*

AbstractRule::= ParserRule | TerminalRule | EnumRule

AbstractMetamodelDeclaration::=
	GeneratedMetamodel | ReferencedMetamodel


GeneratedMetamodel::=
	'generate' ValidID REFERENCE_ecoreEPackage_STRING/*ePackage=[ecore::EPackage|STRING]*/ ('as' ValidID)?


ReferencedMetamodel::=
	'import' REFERENCE_ecoreEPackage_STRING ('as' ValidID)?

//fragment Alias returns AbstractMetamodelDeclaration:
//	'as' alias=ValidID
//;

Annotation::=
	'@' ID


ParserRule ::=
	(Annotation)*
	(
	  'fragment' RuleNameAndParams ('*' | ('returns' TypeRef)?)
	| RuleNameAndParams ('returns' TypeRef)?
	)
	('hidden' '(' (REFERENCE_AbstractRule_RuleID/*hiddenTokens+=[AbstractRule|RuleID]*/ (',' REFERENCE_AbstractRule_RuleID)*)? ')')? ':'
		Alternatives
	';'


RuleNameAndParams::=
	ValidID ('<' (Parameter (',' Parameter)*)? '>')?


Parameter::=
	ID


TypeRef ::=
	(REFERENCE_AbstractMetamodelDeclaration/*metamodel=[AbstractMetamodelDeclaration]*/ '::')? REFERENCE_ecoreEClassifier/*classifier=[ecore::EClassifier]*/


Alternatives::=
	ConditionalBranch ( ('|' ConditionalBranch)+)?


ConditionalBranch::=
	  UnorderedGroup
	| '<' Disjunction '>' (AbstractToken)+


UnorderedGroup ::=
	Group ( ('&' Group)+)?


Group::=
	AbstractToken ( (AbstractToken)+)?


AbstractToken ::=
	AbstractTokenWithCardinality |
	Action


AbstractTokenWithCardinality::=
	(Assignment | AbstractTerminal) ('?'|'*'|'+')?


Action::=
	'{' TypeRef ('.' ValidID ('='|'+=') 'current')? '}'


AbstractTerminal::=
	Keyword |
	RuleCall |
	ParenthesizedElement |
	PredicatedKeyword |
	PredicatedRuleCall |
	PredicatedGroup


Keyword::=
	STRING


RuleCall::=
	REFERENCE_AbstractRule_RuleID/*rule=[AbstractRule|RuleID]*/ ('<' NamedArgument (',' NamedArgument)* '>')?


NamedArgument::=
	( REFERENCE_Parameter_ID /*parameter=[Parameter|ID]*/  '=')?
	( Disjunction )


LiteralCondition::=
	('true' | 'false')


Disjunction::=
	Conjunction ( '|'Conjunction)*


Conjunction::=
	Negation ('&' Negation)*


Negation ::=
	Atom | '!' Negation


Atom ::=
	ParameterReference | ParenthesizedCondition | LiteralCondition


ParenthesizedCondition ::=
	'(' Disjunction ')'


ParameterReference::=
	[Parameter|ID]


TerminalRuleCall::=
	REFERENCE_AbstractRule_RuleID/*rule=[AbstractRule|RuleID]*/


RuleID::=
	ValidID ('::' ValidID)*


ValidID::=
	ID | 'true' | 'false'


PredicatedKeyword::=
	('=>' | '->') STRING


PredicatedRuleCall::=
	('=>' | '->') REFERENCE_AbstractRule_RuleID ('<' NamedArgument (',' NamedArgument)* '>')?


Assignment::=
	('=>' | '->')? ValidID ('+='|'='|'?=') AssignableTerminal


AssignableTerminal::=
	Keyword | RuleCall | ParenthesizedAssignableElement | CrossReference


ParenthesizedAssignableElement::=
	'(' AssignableAlternatives ')'


AssignableAlternatives::=
	AssignableTerminal ( ('|' AssignableTerminal)+)?


CrossReference ::=
	'[' TypeRef ('|' CrossReferenceableTerminal )? ']'


CrossReferenceableTerminal::=
	Keyword | RuleCall


ParenthesizedElement::=
	'(' Alternatives ')'


PredicatedGroup::=
	('=>' | '->') '(' Alternatives ')'


TerminalRule ::=
	(Annotation)*
	'terminal' ('fragment' ValidID | ValidID ('returns' TypeRef)?) ':'
		TerminalAlternatives
	';'


TerminalAlternatives::=
	TerminalGroup ( ('|' TerminalGroup)+)?


TerminalGroup::=
	TerminalToken ( (TerminalToken)+)?


/* SuppressWarnings[potentialOverride]: Handled in CardinalityAwareEcoreFactory */
TerminalToken::=
	TerminalTokenElement ('?'|'*'|'+')?


TerminalTokenElement::=
	CharacterRange | TerminalRuleCall | ParenthesizedTerminalElement | AbstractNegatedToken | Wildcard | /*^*/EOF


ParenthesizedTerminalElement::=
	'(' TerminalAlternatives ')'


AbstractNegatedToken::=
	NegatedToken | UntilToken


NegatedToken::=
	'!' TerminalTokenElement


UntilToken::=
	'->' TerminalTokenElement


Wildcard::=
	 '.'


/*^*/EOF::=
	 'EOF'


CharacterRange ::=
	Keyword (  '..' Keyword)?


EnumRule::=
	( Annotation)*
	'enum' ValidID ('returns' TypeRef)? ':'
		EnumLiterals
	';'


EnumLiterals::=
	EnumLiteralDeclaration ( ('|' EnumLiteralDeclaration)+)?


EnumLiteralDeclaration::=
	REFERENCE_ecoreEEnumLiteral/*enumLiteral=[ecore::EEnumLiteral]*/ ('=' Keyword)?


//REFERENCE
REFERENCE_Grammar_GrammarID::= GrammarID
REFERENCE_AbstractRule_RuleID::= RuleID
REFERENCE_ecoreEPackage_STRING::=STRING
REFERENCE_Parameter_ID::=ID
REFERENCE_AbstractMetamodelDeclaration::=ID
REFERENCE_ecoreEClassifier::=ID
REFERENCE_ecoreEEnumLiteral::=ID
