gen/com/intellij/xtextLanguage/xtext/parser/XtextParser.java
// This is a generated file. Not intended for manual editing.
package com.intellij.xtextLanguage.xtext.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static com.intellij.xtextLanguage.xtext.psi.XtextTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.psi.tree.IFileElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class XtextParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    if (t instanceof IFileElementType) {
      r = parse_root_(t, b, 0);
    }
    else {
      r = false;
    }
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return Grammar(b, l + 1);
  }

  /* ********************************************************** */
  // GeneratedMetamodel | ReferencedMetamodel
  public static boolean AbstractMetamodelDeclaration(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AbstractMetamodelDeclaration")) return false;
    if (!nextTokenIs(b, "<abstract metamodel declaration>", GENERATE, IMPORT)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ABSTRACT_METAMODEL_DECLARATION, "<abstract metamodel declaration>");
    r = GeneratedMetamodel(b, l + 1);
    if (!r) r = ReferencedMetamodel(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // NegatedToken | UntilToken
  public static boolean AbstractNegatedToken(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AbstractNegatedToken")) return false;
    if (!nextTokenIs(b, "<abstract negated token>", ACX_MARK, WEAK_PRED)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ABSTRACT_NEGATED_TOKEN, "<abstract negated token>");
    r = NegatedToken(b, l + 1);
    if (!r) r = UntilToken(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // ParserRule | TerminalRule | EnumRule
  public static boolean AbstractRule(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AbstractRule")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ABSTRACT_RULE, "<abstract rule>");
    r = ParserRule(b, l + 1);
    if (!r) r = TerminalRule(b, l + 1);
    if (!r) r = EnumRule(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // Keyword |
  // 	RuleCall |
  // 	ParenthesizedElement |
  // 	PredicatedKeyword |
  // 	PredicatedRuleCall |
  // 	PredicatedGroup
  public static boolean AbstractTerminal(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AbstractTerminal")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ABSTRACT_TERMINAL, "<abstract terminal>");
    r = Keyword(b, l + 1);
    if (!r) r = RuleCall(b, l + 1);
    if (!r) r = ParenthesizedElement(b, l + 1);
    if (!r) r = PredicatedKeyword(b, l + 1);
    if (!r) r = PredicatedRuleCall(b, l + 1);
    if (!r) r = PredicatedGroup(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // AbstractTokenWithCardinality |
  // 	Action
  public static boolean AbstractToken(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AbstractToken")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ABSTRACT_TOKEN, "<abstract token>");
    r = AbstractTokenWithCardinality(b, l + 1);
    if (!r) r = Action(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // (Assignment | AbstractTerminal) ('?'|'*'|'+')?
  public static boolean AbstractTokenWithCardinality(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AbstractTokenWithCardinality")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ABSTRACT_TOKEN_WITH_CARDINALITY, "<abstract token with cardinality>");
    r = AbstractTokenWithCardinality_0(b, l + 1);
    r = r && AbstractTokenWithCardinality_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // Assignment | AbstractTerminal
  private static boolean AbstractTokenWithCardinality_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AbstractTokenWithCardinality_0")) return false;
    boolean r;
    r = Assignment(b, l + 1);
    if (!r) r = AbstractTerminal(b, l + 1);
    return r;
  }

  // ('?'|'*'|'+')?
  private static boolean AbstractTokenWithCardinality_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AbstractTokenWithCardinality_1")) return false;
    AbstractTokenWithCardinality_1_0(b, l + 1);
    return true;
  }

  // '?'|'*'|'+'
  private static boolean AbstractTokenWithCardinality_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AbstractTokenWithCardinality_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, QUES_MARK);
    if (!r) r = consumeToken(b, ASTERISK);
    if (!r) r = consumeToken(b, PLUS);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // '{' TypeRef ('.' ValidID ('='|'+=') 'current')? '}'
  public static boolean Action(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Action")) return false;
    if (!nextTokenIs(b, L_BRACE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, L_BRACE);
    r = r && TypeRef(b, l + 1);
    r = r && Action_2(b, l + 1);
    r = r && consumeToken(b, R_BRACE);
    exit_section_(b, m, ACTION, r);
    return r;
  }

  // ('.' ValidID ('='|'+=') 'current')?
  private static boolean Action_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Action_2")) return false;
    Action_2_0(b, l + 1);
    return true;
  }

  // '.' ValidID ('='|'+=') 'current'
  private static boolean Action_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Action_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, DOT);
    r = r && ValidID(b, l + 1);
    r = r && Action_2_0_2(b, l + 1);
    r = r && consumeToken(b, CURRENT);
    exit_section_(b, m, null, r);
    return r;
  }

  // '='|'+='
  private static boolean Action_2_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Action_2_0_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, EQUALS);
    if (!r) r = consumeToken(b, PLUS_EQUALS);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // ConditionalBranch ( ('|' ConditionalBranch)+)?
  public static boolean Alternatives(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Alternatives")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ALTERNATIVES, "<alternatives>");
    r = ConditionalBranch(b, l + 1);
    r = r && Alternatives_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ( ('|' ConditionalBranch)+)?
  private static boolean Alternatives_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Alternatives_1")) return false;
    Alternatives_1_0(b, l + 1);
    return true;
  }

  // ('|' ConditionalBranch)+
  private static boolean Alternatives_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Alternatives_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Alternatives_1_0_0(b, l + 1);
    while (r) {
      int c = current_position_(b);
      if (!Alternatives_1_0_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "Alternatives_1_0", c)) break;
    }
    exit_section_(b, m, null, r);
    return r;
  }

  // '|' ConditionalBranch
  private static boolean Alternatives_1_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Alternatives_1_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, PIPE);
    r = r && ConditionalBranch(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // '@' ID
  public static boolean Annotation(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Annotation")) return false;
    if (!nextTokenIs(b, AT_SIGN)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, AT_SIGN, ID);
    exit_section_(b, m, ANNOTATION, r);
    return r;
  }

  /* ********************************************************** */
  // AssignableTerminal ( ('|' AssignableTerminal)+)?
  public static boolean AssignableAlternatives(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AssignableAlternatives")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ASSIGNABLE_ALTERNATIVES, "<assignable alternatives>");
    r = AssignableTerminal(b, l + 1);
    r = r && AssignableAlternatives_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ( ('|' AssignableTerminal)+)?
  private static boolean AssignableAlternatives_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AssignableAlternatives_1")) return false;
    AssignableAlternatives_1_0(b, l + 1);
    return true;
  }

  // ('|' AssignableTerminal)+
  private static boolean AssignableAlternatives_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AssignableAlternatives_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = AssignableAlternatives_1_0_0(b, l + 1);
    while (r) {
      int c = current_position_(b);
      if (!AssignableAlternatives_1_0_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "AssignableAlternatives_1_0", c)) break;
    }
    exit_section_(b, m, null, r);
    return r;
  }

  // '|' AssignableTerminal
  private static boolean AssignableAlternatives_1_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AssignableAlternatives_1_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, PIPE);
    r = r && AssignableTerminal(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // Keyword | RuleCall | ParenthesizedAssignableElement | CrossReference
  public static boolean AssignableTerminal(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AssignableTerminal")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ASSIGNABLE_TERMINAL, "<assignable terminal>");
    r = Keyword(b, l + 1);
    if (!r) r = RuleCall(b, l + 1);
    if (!r) r = ParenthesizedAssignableElement(b, l + 1);
    if (!r) r = CrossReference(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // ('=>' | '->')? ValidID ('+='|'='|'?=') AssignableTerminal
  public static boolean Assignment(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Assignment")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ASSIGNMENT, "<assignment>");
    r = Assignment_0(b, l + 1);
    r = r && ValidID(b, l + 1);
    r = r && Assignment_2(b, l + 1);
    r = r && AssignableTerminal(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ('=>' | '->')?
  private static boolean Assignment_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Assignment_0")) return false;
    Assignment_0_0(b, l + 1);
    return true;
  }

  // '=>' | '->'
  private static boolean Assignment_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Assignment_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, PRED);
    if (!r) r = consumeToken(b, WEAK_PRED);
    exit_section_(b, m, null, r);
    return r;
  }

  // '+='|'='|'?='
  private static boolean Assignment_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Assignment_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, PLUS_EQUALS);
    if (!r) r = consumeToken(b, EQUALS);
    if (!r) r = consumeToken(b, QUES_EQUALS);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // ParameterReference | ParenthesizedCondition | LiteralCondition
  public static boolean Atom(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Atom")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ATOM, "<atom>");
    r = ParameterReference(b, l + 1);
    if (!r) r = ParenthesizedCondition(b, l + 1);
    if (!r) r = LiteralCondition(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // Keyword (  '..' Keyword)?
  public static boolean CharacterRange(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CharacterRange")) return false;
    if (!nextTokenIs(b, STRING)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Keyword(b, l + 1);
    r = r && CharacterRange_1(b, l + 1);
    exit_section_(b, m, CHARACTER_RANGE, r);
    return r;
  }

  // (  '..' Keyword)?
  private static boolean CharacterRange_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CharacterRange_1")) return false;
    CharacterRange_1_0(b, l + 1);
    return true;
  }

  // '..' Keyword
  private static boolean CharacterRange_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CharacterRange_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, RANGE);
    r = r && Keyword(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // UnorderedGroup
  // 	| '<' Disjunction '>' (AbstractToken)+
  public static boolean ConditionalBranch(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ConditionalBranch")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CONDITIONAL_BRANCH, "<conditional branch>");
    r = UnorderedGroup(b, l + 1);
    if (!r) r = ConditionalBranch_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // '<' Disjunction '>' (AbstractToken)+
  private static boolean ConditionalBranch_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ConditionalBranch_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, L_ANGLE_BRACKET);
    r = r && Disjunction(b, l + 1);
    r = r && consumeToken(b, R_ANGLE_BRACKET);
    r = r && ConditionalBranch_1_3(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (AbstractToken)+
  private static boolean ConditionalBranch_1_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ConditionalBranch_1_3")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = ConditionalBranch_1_3_0(b, l + 1);
    while (r) {
      int c = current_position_(b);
      if (!ConditionalBranch_1_3_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "ConditionalBranch_1_3", c)) break;
    }
    exit_section_(b, m, null, r);
    return r;
  }

  // (AbstractToken)
  private static boolean ConditionalBranch_1_3_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ConditionalBranch_1_3_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = AbstractToken(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // Negation ('&' Negation)*
  public static boolean Conjunction(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Conjunction")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CONJUNCTION, "<conjunction>");
    r = Negation(b, l + 1);
    r = r && Conjunction_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ('&' Negation)*
  private static boolean Conjunction_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Conjunction_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!Conjunction_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "Conjunction_1", c)) break;
    }
    return true;
  }

  // '&' Negation
  private static boolean Conjunction_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Conjunction_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, AMPERSAND);
    r = r && Negation(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // '[' TypeRef ('|' CrossReferenceableTerminal )? ']'
  public static boolean CrossReference(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CrossReference")) return false;
    if (!nextTokenIs(b, L_SQUARE_BRACKET)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, L_SQUARE_BRACKET);
    r = r && TypeRef(b, l + 1);
    r = r && CrossReference_2(b, l + 1);
    r = r && consumeToken(b, R_SQUARE_BRACKET);
    exit_section_(b, m, CROSS_REFERENCE, r);
    return r;
  }

  // ('|' CrossReferenceableTerminal )?
  private static boolean CrossReference_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CrossReference_2")) return false;
    CrossReference_2_0(b, l + 1);
    return true;
  }

  // '|' CrossReferenceableTerminal
  private static boolean CrossReference_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CrossReference_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, PIPE);
    r = r && CrossReferenceableTerminal(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // Keyword | RuleCall
  public static boolean CrossReferenceableTerminal(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CrossReferenceableTerminal")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CROSS_REFERENCEABLE_TERMINAL, "<cross referenceable terminal>");
    r = Keyword(b, l + 1);
    if (!r) r = RuleCall(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // Conjunction ( '|'Conjunction)*
  public static boolean Disjunction(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Disjunction")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, DISJUNCTION, "<disjunction>");
    r = Conjunction(b, l + 1);
    r = r && Disjunction_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ( '|'Conjunction)*
  private static boolean Disjunction_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Disjunction_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!Disjunction_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "Disjunction_1", c)) break;
    }
    return true;
  }

  // '|'Conjunction
  private static boolean Disjunction_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Disjunction_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, PIPE);
    r = r && Conjunction(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // 'EOF'
  public static boolean EOF(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EOF")) return false;
    if (!nextTokenIs(b, EOF_KEY)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, EOF_KEY);
    exit_section_(b, m, EOF, r);
    return r;
  }

  /* ********************************************************** */
  // REFERENCE_ecoreEEnumLiteral/*enumLiteral=[ecore::EEnumLiteral]*/ ('=' Keyword)?
  public static boolean EnumLiteralDeclaration(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EnumLiteralDeclaration")) return false;
    if (!nextTokenIs(b, ID)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = REFERENCE_ecoreEEnumLiteral(b, l + 1);
    r = r && EnumLiteralDeclaration_1(b, l + 1);
    exit_section_(b, m, ENUM_LITERAL_DECLARATION, r);
    return r;
  }

  // ('=' Keyword)?
  private static boolean EnumLiteralDeclaration_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EnumLiteralDeclaration_1")) return false;
    EnumLiteralDeclaration_1_0(b, l + 1);
    return true;
  }

  // '=' Keyword
  private static boolean EnumLiteralDeclaration_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EnumLiteralDeclaration_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, EQUALS);
    r = r && Keyword(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // EnumLiteralDeclaration ( ('|' EnumLiteralDeclaration)+)?
  public static boolean EnumLiterals(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EnumLiterals")) return false;
    if (!nextTokenIs(b, ID)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = EnumLiteralDeclaration(b, l + 1);
    r = r && EnumLiterals_1(b, l + 1);
    exit_section_(b, m, ENUM_LITERALS, r);
    return r;
  }

  // ( ('|' EnumLiteralDeclaration)+)?
  private static boolean EnumLiterals_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EnumLiterals_1")) return false;
    EnumLiterals_1_0(b, l + 1);
    return true;
  }

  // ('|' EnumLiteralDeclaration)+
  private static boolean EnumLiterals_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EnumLiterals_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = EnumLiterals_1_0_0(b, l + 1);
    while (r) {
      int c = current_position_(b);
      if (!EnumLiterals_1_0_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "EnumLiterals_1_0", c)) break;
    }
    exit_section_(b, m, null, r);
    return r;
  }

  // '|' EnumLiteralDeclaration
  private static boolean EnumLiterals_1_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EnumLiterals_1_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, PIPE);
    r = r && EnumLiteralDeclaration(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // ( Annotation)*
  // 	'enum' ValidID ('returns' TypeRef)? ':'
  // 		EnumLiterals
  // 	';'
  public static boolean EnumRule(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EnumRule")) return false;
    if (!nextTokenIs(b, "<enum rule>", AT_SIGN, ENUM)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ENUM_RULE, "<enum rule>");
    r = EnumRule_0(b, l + 1);
    r = r && consumeToken(b, ENUM);
    r = r && ValidID(b, l + 1);
    r = r && EnumRule_3(b, l + 1);
    r = r && consumeToken(b, COLON);
    r = r && EnumLiterals(b, l + 1);
    r = r && consumeToken(b, SEMICOLON);
    exit_section_(b, l, m, r, false, null);
    return r;
  }
